[metadata]
name = odltools
summary = Tools for troubleshooting OpenDaylight
description-file = README.rst
author = Sam Hague
author-email = shague@gmail.com
home-page = http://github.com/shague/odltools
license =  Apache-2
classifier =
        Development Status :: 1 - Planning
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: OSI Approved :: Apache Software License
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Topic :: Software Development
        Topic :: System :: Networking
        Topic :: System :: Systems Administration
        Topic :: Utilities

[global]
setup-hooks = pbr.hooks.setup_hook

[entry_points]
console_scripts = odltools = odltools.__main__:main

[files]
packages = odltools

[wheel]
universal = 1

[build_sphinx]
project = 'odltools'
source-dir = docs
